# spendee-expense-report

./: README.md  main.py  pyproject.toml  requirements.txt
data/: expenses.csv  mydatabase.db  transactions_export_2025-07-24_unfcu.csv
notebooks/: clean_data.ipynb  exploratory_analysis.ipynb  plots.ipynb  travel_expenses_analysis.ipynb
notebooks/sql_practice/: conn.ipynb  window_func.ipynb
src/: analyser.py  loader.py  visualizer.py
utils/: budgets.json
