[project]
name = "spendee-expense-analysis"
version = "0.1.0"
description = "Analyze Spendee expense report and generate Altair visualizations"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "pandas",
    "altair",
    "jupyter",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"